# Aevum

./: .gitignore  README.md  README_EN.md  pyproject.toml
aevum/: __init__.py  cli.py  engine.py  features.py  render.py  validation.py
docs/: CLIMATE_COUPLING_RESEARCH_NOTES.md  CLIMATE_MECHANISM_MODELING_PLAN.md  CLIMATE_SYSTEM_PLAN.md  CLUSTER_EXPERIMENT_PLAN_20260708.md  CONTINENTAL_PHYSIOGRAPHIC_ARCHITECTURE_PLAN.md  EARTH_BASED_CLIMATE_FITTING_PLAN.md  EARTH_CLIMATE_REFERENCE_CALIBRATION_PLAN.md  EARTH_GEOMORPHOLOGY_COVERAGE.md  HISTORICAL_GEOMORPHOLOGY_LIFECYCLE_PLAN.md  INDEX.md  PLATE_TECTONICS_ENGINEERING_PLAN.md  PLATE_TECTONICS_REFACTOR_PLAN.md  PROJECT_HANDOFF_20260708.md  R2A_M0_M1_MAP_READ_ATTRIBUTION_20260707.md  REAL_EARTH_GEOMORPHOLOGY_RESEARCH_PLAN.md  RESULT_SHOWCASE.md  SELECTED_SNAPSHOT_72000_REFINEMENT_PLAN.md  TECTONICS_RANDOMNESS_AUDIT.md
tests/: test_biosphere_biomes.py  test_climate_seasonal_redistribution.py  test_core.py  test_earth_climate_biome_gate.py  test_earth_climate_circulation_layout_gate.py  test_earth_climate_comparison.py  test_earth_climate_coupled_consistency_gate.py  test_earth_climate_coupling_convergence_gate.py  test_earth_climate_fitting.py  test_earth_climate_hydro_region_gate.py  test_earth_climate_moisture_flow_gate.py  test_earth_climate_moisture_response_gate.py  test_earth_climate_monsoon_moisture_gate.py  test_earth_climate_mountain_zonation_gate.py  test_earth_climate_ocean_spatial_gate.py  test_earth_climate_pattern_gate.py  test_earth_climate_receiver_catchment_gate.py  test_earth_climate_reference.py  (+24 more)
(+102 files in other folders)
